spacing issue fixed

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -812,6 +812,9 @@ button.greybtn {
 }
 
 @media (max-width: 767.9px) {
+  .datewhite {
+    height: 30%;
+  }
   .afterabsolute {
     margin-top: 250px;
   }
